# sim-trade

./: .gitignore  AGENTS.md  Communication.md  Project.md  pyproject.toml
.worktrees/AntracytowyMaster/: Layout.md
.worktrees/Architect/: Engineering.md
.worktrees/Cleaner/: README.md
.worktrees/Coder/: .swarm_project_root  AGENTS.md
.worktrees/Hardender/: .gitignore
.worktrees/Specifier/: Communication.md  pyproject.toml
.worktrees/Specifier/scripts/: log_event_windows.cmd  start_swarm_psmux_separate_windows_clean.cmd
.worktrees/Specifier/tests/features/: inbox_delivery_flow.feature  sprint_0_foundations.feature
.worktrees/Specifier/tests/qa/: inbox_delivery_flow_qa.md  sprint_0_foundations_qa.md
acceptance/: __init__.py  generate_acceptance.py  runtime.py
acceptance/features/: console_csv_load_confirmation.feature  console_in_memory_data_table.feature  console_instrument_description.feature  console_instrument_discovery.feature  console_selection_memory.feature  console_timeframe_date_discovery.feature
scripts/: new_task_psmux.cmd  run_acceptance.cmd  run_role_codex.cmd  send_to_role_psmux_separate_windows.cmd  task_sender_gui.cmd
src/sim_server/: cli.py  csv_confirmation_records.py  csv_load_confirmation.py  instrument_description_config.py  instrument_descriptions.py  (+5 more)
swarmtools/: gherkin_pytest_runner_worker.py  install_hardener_tools.cmd  local_toolchain.md  task_sender_gui.py
tests/: test_csv_load_confirmation.py  test_instrument_descriptions.py  test_memory_table.py  test_selection_memory.py  test_smoke.py  test_timeframe_dates.py
(+15 files in other folders)
