[build-system]
requires = ["setuptools^>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-server"
version = "0.1.0"
description = "SwarmForge-2.0 project scaffold."
requires-python = "^>=3.11"

[project.scripts]
sim_server = "sim_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
